2207
Assertion error fixed in r18635 as fix for scala/bug#2305. 

Martin: should **scalac** successfully compile the **Java** file, or is the following error expected? 
```scala
TestArrayList.java:1: error: missing type arguments
class TestArrayList extends java.util.ArrayList {
                                      ^
one error found
```
